[package]
name = "albattani"
version = "0.1.0"
edition = "2021"

[dependencies]
kiss3d           = "0.35.0"
nalgebra         = "0.30"
random_color     = "0.6.1"
lazy_static      = "1.4.0"
tap              = "1.0.1"
log              = "0.4.17"
env_logger       = "0.9"
color-eyre       = "0.6.2"
rand             = "0.8.5"
colors-transform = "0.2.11"